--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ dependencies:
   - python=3.12
   - pip
   - quaternionic=1.0.15
-  - pandas
+  - pandas=2.2.2
   - pip:
       - jupyter==1.1.1
       - keras==3.10.0
