--- a/environment.yml
+++ b/environment.yml
@@ -6,6 +6,7 @@ dependencies:
   - pip
   - numpy=1.26.4
   - pandas=2.2.2
+  - openpyxl=3.1.2
   - quaternionic=1.0.15
   - matplotlib=3.8.4
   - scikit-learn=1.4.2
